# enctests

./: Cargo.toml
dogenc/: Cargo.toml
dogenc/src/: lib.rs
src/: main.rs
