[package]
name = "dogenc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
litrs = "0.2.3"
syn = {version="1.0.57",features=["full","fold"]}
quote = "1.0.8"
aes-gcm = "0.9.4"
rand = "0.8.5"

[lib]
proc-macro = true
